--- a/Thirdapp/app/src/main/res/layout/activity_main.xml
+++ b/Thirdapp/app/src/main/res/layout/activity_main.xml
@@ -154,4 +154,9 @@
         />
 
 </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
