--- a/Thirdapp/app/src/main/res/layout/activity_main.xml
+++ b/Thirdapp/app/src/main/res/layout/activity_main.xml
@@ -176,6 +176,13 @@
         android:text="@string/Boto10"
         />
 
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Boto11"
+        />
+
 </LinearLayout>
 
     <ImageView
